--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/cotizacion/rptCotizacionUni2019.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/cotizacion/rptCotizacionUni2019.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptActaAdjudicacion" pageWidth="612" pageHeight="792" columnWidth="544" leftMargin="34" rightMargin="34" topMargin="34" bottomMargin="34" uuid="103cf057-2364-40f0-b590-3a80879be545">
 	<property name="ireport.zoom" value="1.4641000000000017"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="250"/>
+	<property name="ireport.y" value="357"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -77,7 +77,7 @@
 	<group name="reporte">
 		<groupExpression><![CDATA[]]></groupExpression>
 		<groupHeader>
-			<band height="243" splitType="Stretch">
+			<band height="242" splitType="Stretch">
 				<textField>
 					<reportElement uuid="982bf22c-0375-4c4d-a107-2f899a909e36" x="10" y="16" width="524" height="41"/>
 					<textElement textAlignment="Center" markup="none">
@@ -123,38 +123,25 @@
 .concat("El no cumplimento de la presentación de los documentos anteriores será motivo para dejar sin efecto la adjudicación.\n\n\n\n\n\n")]]></textFieldExpression>
 				</textField>
 			</band>
-			<band height="98">
+			<band height="64">
 				<textField isStretchWithOverflow="true">
 					<reportElement uuid="23cd71df-d6c0-42cd-9c6c-04de1151a105" x="10" y="0" width="260" height="64"/>
 					<textElement markup="styled">
 						<font fontName="Arial" size="8"/>
 					</textElement>
-					<textFieldExpression><![CDATA["\n\n\n\n"
+					<textFieldExpression><![CDATA["\n\n\n"
 +"F. ______________________________(Sello OAE)"
-+"\nNombre: "+$F{nombreRepresentanteCe}
-+"\n\n\nSello CDE, CECE o CIE"]]></textFieldExpression>
++"\nNombre: "+$F{nombreRepresentanteCe}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
 					<reportElement uuid="0c1f62b2-6db9-46e7-95ad-d0796f8a0fa2" x="271" y="0" width="246" height="64"/>
 					<textElement markup="styled">
 						<font fontName="Arial" size="8"/>
 					</textElement>
-					<textFieldExpression><![CDATA["\n\n\n\n"
+					<textFieldExpression><![CDATA["\n\n\n"
 +"F. ________________________________"
-+"\nNombre: "+$F{nombreRespresenanteEmp}]]></textFieldExpression>
-				</textField>
-				<textField pattern="" isBlankWhenNull="false">
-					<reportElement uuid="18c31414-5011-4b66-80a3-0f2304bf726d" key="textField-10" x="270" y="64" width="260" height="34"/>
-					<box>
-						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					</box>
-					<textElement>
-						<font fontName="Arial" size="8"/>
-					</textElement>
-					<textFieldExpression><![CDATA["Sello si aplica\n"+
++"\nNombre: "+$F{nombreRespresenanteEmp}
++"\nSello si aplica\n"+
 (new SimpleDateFormat("HH:mm, dd/MM/yyyy")).format(new Date())]]></textFieldExpression>
 				</textField>
 			</band>
@@ -184,10 +171,10 @@
 					</textElement>
 					<textFieldExpression><![CDATA["Nombre: "+$F{nombreRepresentanteCe}
 +"\n\nF.____________________________"
-+"\nFecha y Hora\nSello CDE,CECE O CIE"]]></textFieldExpression>
++"\n"+(new SimpleDateFormat("HH:mm, dd/MM/yyyy")).format(new Date())]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement uuid="d6ff2fb9-7bcc-4883-8818-85c593499b6c" x="274" y="58" width="100" height="14"/>
+					<reportElement uuid="d6ff2fb9-7bcc-4883-8818-85c593499b6c" x="272" y="58" width="100" height="14"/>
 					<textElement>
 						<font fontName="Arial" size="9"/>
 					</textElement>
