--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/rptActaAdjudicacionBean2018.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/rptActaAdjudicacionBean2018.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptActaAdjudicacion" pageWidth="612" pageHeight="792" columnWidth="510" leftMargin="51" rightMargin="51" topMargin="39" bottomMargin="39" uuid="244b56df-7b1c-4fca-9e9d-dde2f9b172eb">
-	<property name="ireport.zoom" value="1.1269722013523664"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.zoom" value="1.9965000000000006"/>
+	<property name="ireport.x" value="344"/>
+	<property name="ireport.y" value="621"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -53,9 +53,9 @@
 	<group name="reporte" isStartNewColumn="true" isStartNewPage="true" isResetPageNumber="true" isReprintHeaderOnEachPage="true">
 		<groupExpression><![CDATA[]]></groupExpression>
 		<groupHeader>
-			<band height="232" splitType="Stretch">
+			<band height="188" splitType="Stretch">
 				<textField isBlankWhenNull="false">
-					<reportElement uuid="c89610dd-e8b5-4071-a79e-c44be59352dc" key="textField-1" x="0" y="69" width="510" height="117"/>
+					<reportElement uuid="c89610dd-e8b5-4071-a79e-c44be59352dc" key="textField-1" x="0" y="63" width="510" height="75"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -63,7 +63,7 @@
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement textAlignment="Justified">
-						<font fontName="Arial" size="10"/>
+						<font fontName="Arial" size="8"/>
 					</textElement>
 					<textFieldExpression><![CDATA["En reunión extraordinaria del ".concat($F{modalidadAdministrativa}).concat(" que administra el centro educativo ").concat($F{nombreCe}).concat(", código ").
 concat($F{codigoEntidad}).concat(" a las ").concat($F{horaRegistro}+":"+$F{minutoRegistro}).concat(" horas del día ").
@@ -83,7 +83,7 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Arial" size="13"/>
+						<font fontName="Arial" size="12"/>
 					</textElement>
 					<text><![CDATA[ACTA DE ADJUDICACION]]></text>
 				</staticText>
@@ -108,14 +108,14 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 					<imageExpression><![CDATA[$P{ubicacionImagenes} + "logo_mined_rpt.png"]]></imageExpression>
 				</image>
 				<subreport isUsingCache="true">
-					<reportElement uuid="263910dc-3ced-4c00-8594-5c09f8bce4e9" key="subreport-3" x="0" y="187" width="510" height="45"/>
+					<reportElement uuid="263910dc-3ced-4c00-8594-5c09f8bce4e9" key="subreport-3" x="0" y="143" width="510" height="45"/>
 					<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{lstParticipantes})]]></dataSourceExpression>
 					<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "subRptActaAdjudicacionProveedoresBean2017.jasper"]]></subreportExpression>
 				</subreport>
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="203" splitType="Stretch">
+			<band height="180" splitType="Stretch">
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false">
 					<reportElement uuid="919a6134-db0d-4f42-b5bb-18e8d50d805f" key="textField-9" x="0" y="0" width="510" height="74"/>
 					<box>
@@ -125,7 +125,7 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement markup="styled">
-						<font fontName="Arial" size="10"/>
+						<font fontName="Arial" size="8"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Por cumplir con las especificaciones requeridas por el Organismo para esta compra y de acuerdo a la justificación siguiente: ___________________________________________________________________________________"+
 "_____________________________________________________________________________________________"+
@@ -134,7 +134,7 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 				<staticText>
 					<reportElement uuid="8e37bd84-3b2d-4f23-8a63-b84c3d8d4fcb" x="0" y="74" width="237" height="13"/>
 					<textElement>
-						<font fontName="Arial" size="9"/>
+						<font fontName="Arial" size="8"/>
 					</textElement>
 					<text><![CDATA[Nombres y Firmas de quienes realizaron el análisis:]]></text>
 				</staticText>
@@ -147,12 +147,15 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement>
-						<font fontName="Arial"/>
+						<font fontName="Arial" size="8"/>
 					</textElement>
 					<text><![CDATA[F:]]></text>
 				</staticText>
 				<line>
 					<reportElement uuid="b817a9dc-45c9-4bfc-9eb3-aa7b3f30959f" key="line-1" x="275" y="83" width="168" height="1"/>
+					<graphicElement>
+						<pen lineWidth="0.5"/>
+					</graphicElement>
 				</line>
 				<staticText>
 					<reportElement uuid="2347e2ab-ea28-4cf5-b364-7b1029c59552" key="staticText-1" x="261" y="147" width="14" height="13"/>
@@ -163,12 +166,15 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement>
-						<font fontName="Arial"/>
+						<font fontName="Arial" size="8"/>
 					</textElement>
 					<text><![CDATA[F:]]></text>
 				</staticText>
 				<line>
 					<reportElement uuid="b817a9dc-45c9-4bfc-9eb3-aa7b3f30959f" key="line-1" x="275" y="156" width="168" height="1"/>
+					<graphicElement>
+						<pen lineWidth="0.5"/>
+					</graphicElement>
 				</line>
 				<staticText>
 					<reportElement uuid="c88d29b3-de73-4d88-bc77-1e6bce7d9fbf" key="staticText-4" x="443" y="70" width="63" height="13"/>
@@ -179,7 +185,7 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement textAlignment="Left">
-						<font fontName="Arial" size="9"/>
+						<font fontName="Arial" size="8"/>
 					</textElement>
 					<text><![CDATA[(sello OAE)]]></text>
 				</staticText>
@@ -192,7 +198,7 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement textAlignment="Left">
-						<font fontName="Arial" size="9"/>
+						<font fontName="Arial" size="8"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$P{pMiembro}+
 "\nPresidente(a) del Organismo de"+
