--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/subRptActaAdjudicacionProveedoresBean2017.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/subRptActaAdjudicacionProveedoresBean2017.jrxml
@@ -30,7 +30,7 @@
 		<band splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="15" splitType="Stretch">
+		<band height="14" splitType="Stretch">
 			<textField isBlankWhenNull="false">
 				<reportElement uuid="400115ce-de58-449c-ae5e-dd4069d6a7ff" key="textField-1" x="28" y="1" width="23" height="13"/>
 				<box>
@@ -40,7 +40,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement>
-					<font size="9"/>
+					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{id}+")"]]></textFieldExpression>
 			</textField>
@@ -53,16 +53,16 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement>
-					<font size="9"/>
+					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{razonSocial}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="65" splitType="Stretch">
+		<band height="51" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="50e22f20-440a-4075-8955-4f8a5a735216" key="staticText-1" x="15" y="2" width="520" height="63"/>
+				<reportElement uuid="50e22f20-440a-4075-8955-4f8a5a735216" key="staticText-1" x="15" y="2" width="520" height="49"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -70,7 +70,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Justified">
-					<font size="9"/>
+					<font fontName="Arial" size="8"/>
 				</textElement>
 				<text><![CDATA[Posterior a la generación e impresión de cotizaciones, se analizaron detenidamente tomando en cuenta los criterios siguientes: a) presentación de declaración jurada de cumplimiento de especificaciones técnicas, plazo y lugar de entrega; b) oferta económica; c) capacidad de producción o de suministro proporcionada por el proveedor en su manifestación de interés y calificada por CONAMYPE; y d) priorizando artesanos y negocios pequeños de la localidad; estableciendo en orden de mérito las ofertas económicas (de menor a mayor precio) adjudicando a cada persona proveedora de acuerdo al siguiente detalle:]]></text>
 			</staticText>
@@ -83,7 +83,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement>
-					<font size="9"/>
+					<font fontName="Arial" size="8"/>
 				</textElement>
 				<text><![CDATA[c)]]></text>
 			</staticText>
